Fix: stop menu causing x-scrolling on mobile

--- a/themes/solidaritynz/assets/css/main.css
+++ b/themes/solidaritynz/assets/css/main.css
@@ -17,6 +17,7 @@ body {
   font-weight: normal;
   padding: 1rem 0.5rem;
   box-sizing: border-box;
+  overflow-x: hidden;
 }
 
 h1, h2, h3, h4, h5, h6 {
